2006-11-20  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (BOOSTER_GTK_LIBS) [hildon_booster]: Link against
	libstdc++.

2006-11-20  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/defender.c: Include <string.h>.

2006-11-20  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.21~.

2006-11-14  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.20.

2006-11-14  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HILDON_DEPENDS): Add libossohelp, libhildonmenu and
	hildon-status-bar-lib.

2006-11-13  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (OOM_ENABLE): New macro.
	(oom_unprotect): New function.
	(launch_process): Invert the logic and call oom_unprotect instead
	of rise_oom_defense and only for processes with positive or zero
	priority.

2006-11-13  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/defender.c (OOM_ADJ_VALUE): Rename to ...
	(OOM_DISABLE): ... this. Stringify.
	(set_oom_adj): Use file descriptor based functions instead of FILE
	based ones.

2006-11-07  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HILDON_DEPENDS): Add libgtkhtml-3.8, libosso,
	libossomime, hildon-base-lib and hildon-fm.

2006-11-07  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.20~.

2006-10-10  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.19.

2006-10-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (maemo_booster_null_so_CFLAGS): New variable.
	(maemo_booster_gtk_so_CFLAGS): Likewise.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/summoner.c: Include <unistd.h>. Remove commented out
	<sys/resource.h> include.
	* launcher/prog.c: Include <stdlib.h>.
	* launcher/booster.c: Likewise.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.19~.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.18.
