@@ -2,6 +2,7 @@ maemo-launcher (0.21~-1) UNRELEASED; urgency=low
 
   * New Upstream Release.
     - Link against libstdc++. (Fixes: NB#47726)
+    - Initialize Xft by calling its constructors. (Fixes: NB#17937)
 
  -- Guillem Jover <guillem.jover@nokia.com>  Mon, 20 Nov 2006 15:21:39 +0200
 
